fix: fix buttons on mobile iphone

--- a/src/index.css
+++ b/src/index.css
@@ -161,6 +161,8 @@ li span {
   font-size: 20px;
   vertical-align: middle;
   line-height: 20px;
+  padding: 0px;
+  margin: 2px;
 }
 
 .episode-up {
